--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,7 +6,7 @@
     <div class="card shadow-sm">
       <div class="card-body">
         <h2 class="card-title text-center mb-4">Registrazione</h2>
-        <form method="post" action="/register">
+        <form method="post" action="/registration">
           {% csrf_token %}
           <div class="mb-3">
             <label for="username" class="form-label">Username:</label>
