--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,19 +1,15 @@
 {% extends "abbellimento.html" %}
 
-Login
-
-{% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-6 text-center">
-        <h2 class="mb-4">Login</h2>
-        <p class="fs-4">BENVENUTO {{ username }}</p>
-
-        <br><br>
-
-        <br>
-        <a href="">
-            <div id="logout"><p>LOGOUT</p></div>
-        </a>
-    </div>
-</div>
-{% endblock %}
+        {% block content %}
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <h2 class="mb-4">Homepage</h2>
+                <p class="fs-4">BENVENUTO {{ username }}</p>
+                <br><br>
+                <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Logout</button>
+                </form>
+            </div>
+        </div>
+        {% endblock %}
