--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                 <form method="post" action="/login">
                     {% csrf_token %}
                     <div class="mb-3">
-                        <label for="username" class="form-label">Username:</label>
+                        <label for="username" class="form-label">Email:</label>
                         <input type="text" class="form-control" id="username" name="username" required>
                     </div>
                     <div class="mb-3">
