sesto commit (login personalizzato)

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,8 @@
                 </form>
                 {{ error_message }}
                 <div class="text-center">
-                    <p class="mb-2">Non ancora registato?</p>
-                    <form action="/registration" method="get">
-                        <button type="submit" class="btn btn-outline-secondary">Registrati</button>
-                    </form>
+                    <p class="mb-2">Non ancora registrato?</p>
+                    <a href="/registration" class="btn btn-outline-secondary">Registrati</a>
                 </div>
             </div>
         </div>
